--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบแจ้งซ่อม Online SMAT & THAI SCT By.PAI-IT</title>
+    <title>ระบบแจ้งซ่อม Online ฺBy.PAI-IT</title>
     <style>
         html,
         body {
